--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -2,6 +2,7 @@ name: boosCooldown
 main: cz.boosik.boosCooldown.boosCoolDown
 version: 1.6.0
 author: boosik
+softdepend: [Vault, iConomy 4 & 5 & 6, BOSEconomy 6 & 7, EssentialsEcon, 3Co, MultiCurrency, MineConomy, eWallet, EconXP]
 description: >
              Shortcuts
 commands:
@@ -9,3 +10,4 @@ commands:
     description: Reload Command for boosCooldown
     usage: |
            /<command> [reload]
+	   
