--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -1,12 +1,12 @@
 name: boosCooldown
 main: cz.boosik.boosCooldown.boosCoolDown
-version: 1.7.3
+version: 1.7.4
 author: boosik
 softdepend: [Vault, iConomy 4 & 5 & 6, BOSEconomy 6 & 7, EssentialsEcon, 3Co, MultiCurrency, MineConomy, eWallet, EconXP]
 description: >
              Shortcuts
 commands:
-  boosCoolDown:
+  boosCooldowns:
     description: Reload Command for boosCooldown
     usage: |
            /<command> [reload]
