--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -1,12 +1,12 @@
 name: boosCooldown
 main: cz.boosik.boosCooldown.boosCoolDown
-version: 2.1.2 beta
+version: 2.1.3 beta
 author: boosik
-softdepend: [Vault, iConomy 4 & 5 & 6, BOSEconomy 6 & 7, EssentialsEcon, 3Co, MultiCurrency, MineConomy, eWallet, EconXP]
+softdepend: [Vault,PermissionsEX]
 description: >
              Shortcuts
 commands:
   boosCooldowns:
     description: Reload Command for boosCooldown
     usage: |
-           /<command> [reload]
+           /boosCooldowns
