--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -1,7 +1,8 @@
 name: boosCooldowns
 main: cz.boosik.boosCooldown.boosCoolDown
 version: 2.9.4
-author: boosik
+author: LordBoos
+authors: [LordBoos, boosik (ingame name)]
 softdepend: [Vault,PermissionsEX]
 description: >
              Shortcuts
