--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -1,6 +1,6 @@
 name: boosCooldowns
 main: cz.boosik.boosCooldown.boosCoolDown
-version: 3.0.2
+version: 3.1.0
 authors: [LordBoos (ingame name boosik)]
 softdepend: [Vault]
 description: >
@@ -77,7 +77,7 @@ permissions:
         default: false
     booscooldowns.reload:
         description: Player can use "/booscooldowns reload" to reload config file.
-        default: false
+        default: op
     booscooldowns.clear.uses.death:
         description: Players uses (limit-uses=how many times playr can still use command) are cleared on death (must be enabled in config file too!).
         default: false
@@ -89,4 +89,16 @@ permissions:
         default: true
     booscooldowns.set:
         description: Users with this can use "/booscooldowns set" command.
+        default: op
+    booscooldowns.signs.player.use:
+        description: Player can use boosCooldowns signs (marked as player on second line).
+        default: false
+    booscooldowns.signs.server.use:
+        description: Player can use boosCooldowns signs (marked as server on second line).
+        default: false
+    booscooldowns.signs.player.place:
+        description: Player can place/create boosCooldowns signs (marked as player on second line).
+        default: false
+    booscooldowns.signs.server.place:
+        description: Player can place/create boosCooldowns signs (marked as server on second line). !!WARNING!! With this permission, player can create sign with commands that are run as if used from console!
         default: false
