--- a/bin/plugin.yml
+++ b/bin/plugin.yml
@@ -1,6 +1,6 @@
 name: boosCooldowns
 main: cz.boosik.boosCooldown.boosCoolDown
-version: 3.1.3
+version: 3.2.0
 authors: [LordBoos (ingame name boosik)]
 softdepend: [Vault]
 description: >
@@ -59,6 +59,9 @@ permissions:
         default: false
     booscooldowns.nolimit:
         description: Player wont be affected by limiting.
+        default: false
+    booscooldowns.start.cooldowns.death.exception:
+        description: Player's cooldowns wont be started on death.
         default: false
     booscooldowns.nolimit./command:
         description: Command "/command" will not be affected by limits for users with this permission.
