--- a/.classpath
+++ b/.classpath
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="D:/Games/Minecraft/server/bukkit-1.4.7-R1.0.jar"/>
-	<classpathentry kind="lib" path="D:/Downloads/df/Vault.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Jakub/git/bukkit-1.5.1-R0.1-20130328.013018-15.jar"/>
+	<classpathentry kind="lib" path="D:/Games/Minecraft/server/plugins/Vault.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jre6"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
