--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,6 +1,6 @@
 name: boosCooldowns
 main: cz.boosik.boosCooldown.BoosCoolDown
-version: 3.9.5
+version: 3.9.5c
 authors: [LordBoos (ingame name boosik)]
 softdepend: [Vault]
 description: >
