Cleaned up old comments messed up by wrong encoding Implemented shared limits functionality Fixed a bug where player was unable to look around without canceling his warmups, while cancel warmups on move was enabled

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -57,6 +57,14 @@ options:
 commands:
   groups:
     default:
+      /day_command:
+        limit: 5
+        shared_limit:
+        - /night_command
+      /night_command:
+        limit: 5
+        shared_limit:
+        - /day_command
       /command parameter:
         cooldown: 2 hours
       /commandwithparameters *:
