--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>cz.boosik</groupId>
 	<artifactId>boosCooldowns</artifactId>
-	<version>3.9.8-GIT</version>
+	<version>3.9.8c-GIT</version>
 	<name>boosCooldowns</name>
 	<packaging>jar</packaging>
 	<url>http://maven.apache.org</url>
