--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -20,6 +20,7 @@ options:
     start_cooldowns_on_death: false
     command_logging: false
     command_signs: false
+    syntax_blocker_enabled: true
   units:
     seconds: seconds
     minutes: minutes
@@ -54,13 +55,13 @@ options:
     cannot_create_sign: '&6You are not allowed to create this kind of signs!&f'
     cannot_use_sign: '&6You are not allowed to use this sign!&f'
     invalid_command_syntax: '&6You are not allowed to use command syntax /<pluginname>:<command>!'
-    confirmation_cancel_command_execution: 'No'
-    confirmation_confirm_command_execution: 'Yes'
-    confirmation_price_of_command: '&6its price is&e &price& &currency& &6and you now have &e&balance& &currency&'
     confirmation_message: '&6Would you like to use command&e &command& &6?'
+    confirmation_price_of_command: '&6its price is&e &price& &6and you now have &e&balance&'
     confirmation_item_price_of_command: '&6its price is&e &itemprice& &itemname&'
-    confirmation_limit_of_command: '&6it is limited to&e &limit& &6uses'
+    confirmation_limit_of_command: '&6it is limited to&e &limit& &6uses and you can still use it&e &uses& &6times'
     confirmation_xp_price_of_command: '&6its price is&e &xpprice& experience levels'
+    confirmation_confirm_command_execution: 'Yes'
+    confirmation_cancel_command_execution: 'No'
     confirmation_command_cancelled: '&6Execution of command&e &command& &6was cancelled'
 commands:
   groups:
