--- a/pom.xml
+++ b/pom.xml
@@ -3,16 +3,16 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>cz.boosik</groupId>
 	<artifactId>boosCooldowns</artifactId>
-	<version>3.9.8c-GIT</version>
+	<version>3.10.0-GIT</version>
 	<name>boosCooldowns</name>
 	<packaging>jar</packaging>
 	<url>http://maven.apache.org</url>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<minecraft.version>1.8</minecraft.version>
+		<minecraft.version>1.9</minecraft.version>
 		<bukkit.version>R0.1</bukkit.version>
-		<bukkit.packet>v1_8_R1</bukkit.packet>
+		<bukkit.packet>v1_9_R1</bukkit.packet>
 	</properties>
 	<pluginRepositories>
 		<pluginRepository>
