--- a/pom.xml
+++ b/pom.xml
@@ -1,16 +1,25 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>cz.boosik</groupId>
 	<artifactId>boosCooldowns</artifactId>
-	<version>3.10.1-GIT</version>
-	<name>boosCooldowns</name>
-	<packaging>jar</packaging>
+    <version>${boosCooldowns.version}</version>
+    <modules>
+        <module>nms/NMS_hook_1_8_R1</module>
+        <module>nms/NMS_hook_1_8_R2</module>
+        <module>nms/NMS_hook_1_8_R3</module>
+        <module>nms/NMS_hook_1_9_R1</module>
+        <module>nms/NMS</module>
+        <module>plugin</module>
+        <module>jar</module>
+    </modules>
+    <packaging>pom</packaging>
 	<url>http://maven.apache.org</url>
 	<properties>
+        <boosCooldowns.version>3.11.0</boosCooldowns.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<minecraft.version>1.9</minecraft.version>
+        <minecraft.version>1.9.2</minecraft.version>
 		<bukkit.version>R0.1</bukkit.version>
 		<bukkit.packet>v1_9_R1</bukkit.packet>
 	</properties>
@@ -39,44 +48,9 @@
 			<id>spigot-repo</id>
 			<url>http://repo.md-5.net/content/repositories/snapshots/</url>
 		</repository>
+        <repository>
+            <id>elmakers-spigot-repo</id>
+            <url>http://maven.elmakers.com/repository/</url>
+        </repository>
 	</repositories>
-	<dependencies>
-		<dependency>
-			<groupId>org.bukkit</groupId>
-			<artifactId>bukkit</artifactId>
-			<version>${minecraft.version}-${bukkit.version}-SNAPSHOT</version>
-			<scope>provided</scope>
-			<optional>true</optional>
-		</dependency>
-		<dependency>
-			<groupId>net.milkbowl.vault</groupId>
-			<artifactId>Vault</artifactId>
-			<version>LATEST</version>
-		</dependency>
-	</dependencies>
-	<build>
-		<finalName>boosCooldowns</finalName>
-		<sourceDirectory>${basedir}/src/main/java/</sourceDirectory>
-		<resources>
-			<resource>
-				<targetPath>.</targetPath>
-				<filtering>true</filtering>
-				<directory>${basedir}/src/main/resources/</directory>
-				<includes>
-					<include>plugin.yml</include>
-					<include>config.yml</include>
-				</includes>
-			</resource>
-		</resources>
-		<plugins>
-			<plugin>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.1</version>
-				<configuration>
-					<source>1.7</source>
-					<target>1.7</target>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
 </project>
