--- a/plugin/src/main/resources/config.yml
+++ b/plugin/src/main/resources/config.yml
@@ -87,7 +87,9 @@ options:
     confirmation_limit_of_command: '&6it is limited to&e &limit& &6uses and you can still use it&e &uses& &6times'
     confirmation_xp_price_of_command: '&6its price is&e &xpprice& experience levels'
     confirmation_confirm_command_execution: 'Yes'
+    confirmation_confirm_command_execution_hint: 'Click to confirm'
     confirmation_cancel_command_execution: 'No'
+    confirmation_cancel_command_execution_hint: 'Click to cancel'
     confirmation_command_cancelled: '&6Execution of command&e &command& &6was cancelled'
     confirmation_toggle_disable: 'Confirmation messages are now disabled for you!'
     confirmation_toggle_enable: 'Confirmation messages are now enabled for you!'
