--- a/jar/pom.xml
+++ b/jar/pom.xml
@@ -16,37 +16,43 @@
         <dependency>
             <groupId>cz.boosik</groupId>
             <artifactId>NMS</artifactId>
-            <version>3.11.0</version>
+            <version>${boosCooldowns.version}</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>cz.boosik</groupId>
             <artifactId>NMS_hook_1_8_R3</artifactId>
-            <version>3.11.0</version>
-            <scope>compile</scope>
-        </dependency>
-        <dependency>
-            <groupId>cz.boosik</groupId>
-            <artifactId>NMS_hook_1_9_R1</artifactId>
-            <version>3.11.0</version>
+            <version>${boosCooldowns.version}</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>cz.boosik</groupId>
             <artifactId>NMS_hook_1_8_R1</artifactId>
-            <version>3.11.0</version>
+            <version>${boosCooldowns.version}</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>cz.boosik</groupId>
             <artifactId>NMS_hook_1_8_R2</artifactId>
-            <version>3.11.0</version>
+            <version>${boosCooldowns.version}</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>cz.boosik</groupId>
+            <artifactId>NMS_hook_1_9_R1</artifactId>
+            <version>${boosCooldowns.version}</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>cz.boosik</groupId>
+            <artifactId>NMS_hook_1_9_R2</artifactId>
+            <version>${boosCooldowns.version}</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>cz.boosik</groupId>
             <artifactId>plugin</artifactId>
-            <version>3.11.0</version>
+            <version>${boosCooldowns.version}</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
