--- a/jar/pom.xml
+++ b/jar/pom.xml
@@ -51,6 +51,12 @@
         </dependency>
         <dependency>
             <groupId>cz.boosik</groupId>
+            <artifactId>NMS_hook_1_10_R1</artifactId>
+            <version>${boosCooldowns.version}</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>cz.boosik</groupId>
             <artifactId>plugin</artifactId>
             <version>${boosCooldowns.version}</version>
             <scope>compile</scope>
