--- a/pom.xml
+++ b/pom.xml
@@ -11,12 +11,12 @@
     <packaging>pom</packaging>
 	<url>http://maven.apache.org</url>
 	<properties>
-		<boosCooldowns.version>3.13.4</boosCooldowns.version>
+		<boosCooldowns.version>3.14.0</boosCooldowns.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<minecraft.version>1.11</minecraft.version>
+		<minecraft.version>1.12</minecraft.version>
 		<bukkit.version>R0.1</bukkit.version>
-		<bukkit.packet>v1_11_R1</bukkit.packet>
+		<bukkit.packet>v1_12_R1</bukkit.packet>
 	</properties>
 	<pluginRepositories>
 		<pluginRepository>
@@ -45,8 +45,12 @@
 			<url>http://nexus.hc.to/content/repositories/pub_releases</url>
 		</repository>
 		<repository>
-			<id>spigot-repo</id>
+			<id>spigot-repo-old</id>
 			<url>http://repo.md-5.net/content/repositories/snapshots/</url>
+		</repository>
+		<repository>
+			<id>spigot-repo</id>
+			<url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
 		</repository>
         <repository>
             <id>elmakers-spigot-repo</id>
